feat(author + book): push all to get ou of the vm
